--- a/static/index.html
+++ b/static/index.html
@@ -679,10 +679,9 @@
         
         // Audio tracks
         const tracks = [
-            'static/track1.wav', 'static/track2.wav', 'static/track3.wav',
-            'static/track4.wav', 'static/track5.wav', 'static/track6.wav',
-            'static/track7.wav', 'static/track8.wav', 'static/track9.wav',
-            'static/track10.wav'
+            'static/track 1.wav', 
+            'static/track 2.wav', 
+            'static/track 3.wav'
         ];
         
         // Initialize the game
